--- a/css/simones-portfolio-c1567e.webflow.css
+++ b/css/simones-portfolio-c1567e.webflow.css
@@ -1,6 +1,16 @@
 :root {
+  --header: #8f0609;
+  --orange-highlight: #d8660e;
   --white: white;
   --black: black;
+  --pink-highlight: #910608;
+}
+
+.w-layout-blockcontainer {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .w-layout-grid {
@@ -10,6 +20,18 @@
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
+}
+
+@media screen and (max-width: 991px) {
+  .w-layout-blockcontainer {
+    max-width: 728px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .w-layout-blockcontainer {
+    max-width: none;
+  }
 }
 
 body {
@@ -176,8 +198,18 @@ figcaption {
 .container {
   width: 100%;
   max-width: 1140px;
+  text-align: left;
+  flex-direction: row;
+  flex: 0 auto;
+  justify-content: space-around;
+  align-self: center;
+  align-items: stretch;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  position: static;
 }
 
 .styleguide-content-wrap {
@@ -210,7 +242,9 @@ figcaption {
   text-transform: none;
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 64px;
+  font-family: Bitter, serif;
+  font-size: 30px;
+  font-weight: 700;
   line-height: 80px;
 }
 
@@ -253,8 +287,13 @@ figcaption {
 }
 
 .paragraph-light {
+  width: auto;
   opacity: .6;
   color: #1f1a1a;
+  overflow-wrap: normal;
+  object-fit: fill;
+  order: 0;
+  align-self: auto;
   font-weight: 600;
 }
 
@@ -264,23 +303,30 @@ figcaption {
 }
 
 .section {
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
   direction: ltr;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
   margin-left: 30px;
   margin-right: 30px;
   display: flex;
 }
 
 .section.cc-contact {
-  background-color: #f4f4f4;
+  background-color: #fcf4f4;
   padding-left: 80px;
   padding-right: 80px;
+  display: flex;
 }
 
 .button {
   color: #fff;
+  text-align: left;
   letter-spacing: 2px;
   text-transform: uppercase;
-  background-color: #1a1b1f;
+  background-color: #c0530a;
   border-radius: 0;
   padding: 12px 25px;
   font-size: 12px;
@@ -566,13 +612,22 @@ figcaption {
 }
 
 .contact {
+  flex-direction: column;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
   padding-top: 80px;
   padding-bottom: 90px;
+  display: flex;
 }
 
 .contact-headline {
   width: 70%;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   margin-bottom: 40px;
+  display: flex;
 }
 
 .contact-form-grid {
@@ -608,12 +663,14 @@ figcaption {
   opacity: .8;
 }
 
-.webflow-logo-tiny {
+.logo {
   margin-top: -2px;
   margin-right: 8px;
 }
 
 .footer-links {
+  flex-direction: row-reverse;
+  justify-content: center;
   align-items: center;
   margin-right: -20px;
   display: flex;
@@ -643,10 +700,13 @@ figcaption {
   grid-row-gap: 30px;
   grid-template: ". ."
   / 1fr 2fr;
-  align-items: start;
-  margin-top: 100px;
+  justify-content: stretch;
+  align-items: center;
+  justify-items: end;
+  margin-top: 10px;
   margin-bottom: 140px;
   text-decoration: none;
+  display: flex;
 }
 
 .hi-there-heading {
@@ -730,7 +790,11 @@ figcaption {
 }
 
 .social-media-heading {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 60px;
+  display: flex;
 }
 
 .social-media-grid {
@@ -847,12 +911,13 @@ figcaption {
   color: #f3171a;
 }
 
-.text-span-3 {
+.highlight-pink {
   color: #910608;
 }
 
-.text-span-4 {
+.highlight-orange {
   color: #d8660e;
+  font-weight: 600;
 }
 
 .text-span-5 {
@@ -876,7 +941,9 @@ figcaption {
   text-align: center;
   text-shadow: 0 5px 1px rgba(0, 0, 0, .2);
   font-family: Bitter, serif;
+  font-size: 36px;
   font-weight: 700;
+  position: static;
 }
 
 .text-span-8 {
@@ -900,6 +967,351 @@ figcaption {
 
 .text-span-14 {
   color: #d8660e;
+}
+
+.paragraph {
+  flex: 0 auto;
+  align-self: auto;
+}
+
+.paragraph-2 {
+  align-self: auto;
+}
+
+.rich-text-block {
+  color: #c0530a;
+  text-align: left;
+  align-self: center;
+}
+
+.contact-basic {
+  flex-direction: row;
+  display: flex;
+}
+
+.media-list {
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  margin-right: -20px;
+  display: flex;
+}
+
+.heading-2 {
+  color: #8f0609;
+  text-shadow: 0 5px 1px rgba(0, 0, 0, .2);
+  font-family: Bitter, serif;
+  font-weight: 700;
+}
+
+.footer-logo {
+  opacity: .5;
+  text-transform: uppercase;
+  align-items: center;
+  text-decoration: none;
+  transition: opacity .4s;
+  display: flex;
+}
+
+.footer-logo:hover {
+  opacity: 1;
+}
+
+.footer-logo:active {
+  opacity: .8;
+}
+
+.tabs {
+  flex: 1;
+  align-self: auto;
+}
+
+.text-block, .text-block-2 {
+  font-weight: 600;
+}
+
+.tab-link-academics {
+  background-color: #f1e2e2;
+}
+
+.tab-link-academics.w--current {
+  background-color: #dd9b9b;
+}
+
+.heading-3 {
+  color: #8f0609;
+  text-shadow: 0 5px 1px rgba(0, 0, 0, .2);
+  font-family: Bitter, serif;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.logo-left-lister {
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 60px;
+  display: flex;
+}
+
+.image {
+  width: 240px;
+  height: 240px;
+  flex: 0 auto;
+  align-self: flex-start;
+}
+
+.logo-right-lister {
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-bottom: 60px;
+  display: flex;
+}
+
+.paragraph-3 {
+  flex: 1;
+  align-self: flex-start;
+  font-weight: 600;
+}
+
+.paragraph-4 {
+  text-align: left;
+  text-transform: uppercase;
+  flex: none;
+  align-self: flex-start;
+}
+
+.body-2 {
+  background-color: #fcf4f4;
+}
+
+.tab-link-experience {
+  background-color: #f1e2e2;
+}
+
+.tab-link-experience.w--current {
+  background-color: #f1ceb3;
+}
+
+.paragraph-5 {
+  flex: 1;
+  align-self: flex-start;
+  font-weight: 600;
+}
+
+.image-2 {
+  align-self: flex-start;
+}
+
+.container-2 {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.button-2 {
+  background-color: #f17b50;
+  font-family: Bitter, serif;
+}
+
+.aboutme {
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  direction: ltr;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 30px;
+  margin-right: 30px;
+  display: flex;
+}
+
+.aboutme.cc-contact {
+  background-color: #fcf4f4;
+  padding-left: 80px;
+  padding-right: 80px;
+  display: flex;
+}
+
+.section-2 {
+  margin-left: 20px;
+}
+
+.list-item, .list-item-2, .list-item-3, .list {
+  font-size: 14px;
+}
+
+.company-logo {
+  width: 160px;
+  margin-left: 10px;
+}
+
+.paragraph-6 {
+  font-weight: 600;
+}
+
+.body-3 {
+  background-color: #fcf4f4;
+}
+
+.team-slider {
+  background-color: #fcf4f4;
+  border-bottom: 1px solid #e4ebf3;
+  padding: 20px 30px 80px;
+  position: relative;
+}
+
+.container-3 {
+  width: 100%;
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.centered-heading {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.subheading {
+  max-width: 530px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.team-slider-wrapper {
+  height: auto;
+  background-color: rgba(0, 0, 0, 0);
+  margin-top: 50px;
+}
+
+.proj-slide {
+  width: 30%;
+  margin-right: 5%;
+}
+
+.projects {
+  color: var(--header);
+  background-color: #fac9cd;
+  padding-bottom: 24px;
+}
+
+.proj-image {
+  margin-bottom: 18px;
+}
+
+.proj-info {
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 24px;
+  padding-right: 24px;
+  display: flex;
+}
+
+.proj-name {
+  margin-bottom: 12px;
+  font-family: Bitter, serif;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.proj-description {
+  color: var(--orange-highlight);
+  margin-bottom: 20px;
+}
+
+.text-link-arrow {
+  color: #1a1b1f;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 14px;
+  line-height: 20px;
+  text-decoration: none;
+  display: flex;
+}
+
+.arrow-embed {
+  margin-left: 2px;
+  display: flex;
+}
+
+.slider {
+  display: none;
+}
+
+.proj-slider {
+  margin-top: 24px;
+  font-size: 10px;
+  position: static;
+  bottom: -60px;
+}
+
+.paragraph-7 {
+  text-align: center;
+}
+
+.container-4 {
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  display: flex;
+}
+
+.video {
+  width: 25%;
+  height: auto;
+  flex: 1;
+  position: relative;
+}
+
+.paragraph-8 {
+  width: auto;
+  height: auto;
+  flex: 0 auto;
+}
+
+.container-5 {
+  width: 50px;
+  flex: 1;
+}
+
+.section-3 {
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  justify-content: flex-start;
+  display: flex;
+}
+
+.image-3 {
+  flex: none;
+}
+
+.list-item-4 {
+  font-size: 14px;
+}
+
+.list-2 {
+  margin-top: 0;
+  font-size: 14px;
+}
+
+.footer-links-copy {
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  margin-right: -20px;
+  display: flex;
+}
+
+.button-3 {
+  color: #f1d7ba;
+  text-align: right;
+  background-color: #83092c;
+  position: relative;
 }
 
 @media screen and (max-width: 991px) {
@@ -1092,6 +1504,20 @@ figcaption {
     font-size: 36px;
     line-height: 54px;
   }
+
+  .aboutme.cc-contact {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .container-3 {
+    max-width: 728px;
+  }
+
+  .proj-slide {
+    width: 47%;
+    margin-right: 6%;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1256,6 +1682,31 @@ figcaption {
   ._404-wrap {
     padding: 30px;
   }
+
+  .media-list {
+    flex-direction: column;
+  }
+
+  .footer-logo {
+    margin-bottom: 15px;
+  }
+
+  .aboutme {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .aboutme.cc-contact {
+    padding: 15px;
+  }
+
+  .team-slider {
+    padding: 60px 15px;
+  }
+
+  .footer-links-copy {
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1315,50 +1766,19 @@ figcaption {
     font-size: 30px;
     line-height: 46px;
   }
-}
 
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-e3382b42 {
-  grid-area: 1 / 1 / 2 / 3;
-}
+  .container-3 {
+    max-width: none;
+  }
 
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-e3382b42 {
-  grid-area: 1 / 3 / 2 / 4;
-}
+  .centered-heading {
+    margin-bottom: 24px;
+  }
 
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-e3382b42 {
-  grid-area: 2 / 1 / 3 / 2;
-}
-
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-e3382b42 {
-  grid-area: 2 / 2 / 3 / 4;
-}
-
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-e3382b42 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-e3382b42 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-e3382b42 {
-  grid-area: 1 / 3 / 2 / 4;
-}
-
-#w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-e3382b42 {
-  grid-area: 1 / 4 / 2 / 5;
-}
-
-#w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-#w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-#w-node-d783a17e-0b35-a13a-0448-a852d0df4a3a-d0df4a24 {
-  grid-area: 2 / 1 / 3 / 3;
+  .proj-slide {
+    width: 100%;
+    margin-right: 0%;
+  }
 }
 
 #w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c1-e3382b46 {
@@ -1366,27 +1786,7 @@ figcaption {
 }
 
 #w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-e3382b46 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b48 {
-  grid-area: 1 / 1 / 2 / 4;
-}
-
-#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-e3382b48 {
-  grid-area: 2 / 1 / 3 / 3;
-}
-
-#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-e3382b48 {
-  grid-area: 2 / 3 / 3 / 5;
-}
-
-#w-node-b915ad84-715b-fc9d-8156-ee63d52fd223-e3382b48 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-#w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-e3382b48 {
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
 #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b49 {
@@ -1445,36 +1845,20 @@ figcaption {
   grid-area: 1 / 2 / 2 / 3;
 }
 
-#w-node-_1f85730f-9889-a71b-9be8-c086a8d10760-e3382b4b {
+#w-node-_1f85730f-9889-a71b-9be8-c086a8d10760-e3382b4b, #w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24 {
   grid-area: 1 / 1 / 2 / 2;
 }
 
+#w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+#w-node-d783a17e-0b35-a13a-0448-a852d0df4a3a-d0df4a24 {
+  grid-area: 2 / 1 / 3 / 3;
+}
+
 @media screen and (max-width: 991px) {
-  #w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-e3382b42 {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-
-  #w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-e3382b42 {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-
   #w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-e3382b46 {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-
-  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b48 {
-    grid-area: 1 / 1 / 2 / 2;
-  }
-
-  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-e3382b48 {
-    grid-column-end: 2;
-  }
-
-  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-e3382b48 {
-    grid-area: 3 / 1 / 4 / 2;
-  }
-
-  #w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-e3382b48 {
     grid-area: 2 / 1 / 3 / 2;
   }
 
