--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -442,6 +442,7 @@ figcaption {
   align-items: center;
   padding: 30px 50px;
   display: flex;
+
 }
 
 .logo-image {
@@ -449,9 +450,12 @@ figcaption {
 }
 
 .navigation-wrap {
-  align-items: center;
+  align-items: right;
   margin-right: -20px;
   display: flex;
+  background-color: #fcf4f4;
+  position: sticky;
+  top: 0;
 }
 
 .intro-wrap {
@@ -486,7 +490,7 @@ figcaption {
   grid-column-gap: 30px;
   grid-row-gap: 30px;
   grid-template: ". . . ."
-  / 1fr 1fr 1fr 1fr;
+    / 1fr 1fr 1fr 1fr;
   margin-bottom: 140px;
 }
 
@@ -494,8 +498,8 @@ figcaption {
   grid-column-gap: 30px;
   grid-row-gap: 30px;
   grid-template: ". . ."
-                 ". . ."
-                 / 1.5fr 1fr 1.5fr;
+    ". . ."
+    / 1.5fr 1fr 1.5fr;
   margin-bottom: 80px;
 }
 
@@ -577,7 +581,8 @@ figcaption {
   border-color: #e3e6eb;
 }
 
-.text-field:active, .text-field:focus {
+.text-field:active,
+.text-field:focus {
   border-color: #43464d;
 }
 
@@ -699,7 +704,7 @@ figcaption {
   grid-column-gap: 80px;
   grid-row-gap: 30px;
   grid-template: ". ."
-  / 1fr 2fr;
+    / 1fr 2fr;
   justify-content: stretch;
   align-items: center;
   justify-items: end;
@@ -758,7 +763,7 @@ figcaption {
   grid-column-gap: 80px;
   grid-row-gap: 30px;
   grid-template: ". ."
-  / 1fr 1fr;
+    / 1fr 1fr;
   margin-bottom: 140px;
 }
 
@@ -767,7 +772,7 @@ figcaption {
   grid-row-gap: 20px;
   grid-template-rows: auto auto;
   grid-template-areas: ". ."
-                       ". .";
+    ". .";
   margin-bottom: 110px;
 }
 
@@ -802,7 +807,7 @@ figcaption {
   grid-row-gap: 30px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-areas: ". . . ."
-                       ". . . .";
+    ". . . .";
   margin-bottom: 30px;
 }
 
@@ -810,8 +815,8 @@ figcaption {
   grid-column-gap: 50px;
   grid-row-gap: 100px;
   grid-template: ". . . ."
-                 ". . . ."
-                 / 1fr 1fr 1fr 1fr;
+    ". . . ."
+    / 1fr 1fr 1fr 1fr;
   margin-top: 120px;
   margin-bottom: 135px;
 }
@@ -824,7 +829,7 @@ figcaption {
   grid-column-gap: 30px;
   grid-row-gap: 30px;
   grid-template: ". ."
-  / 1fr 2.5fr;
+    / 1fr 2.5fr;
   margin-top: 120px;
   margin-bottom: 120px;
 }
@@ -955,12 +960,14 @@ figcaption {
   font-size: 18px;
 }
 
-.text-span-10, .text-span-11 {
+.text-span-10,
+.text-span-11 {
   color: #d8660e;
   font-weight: 500;
 }
 
-.text-span-12, .text-span-13 {
+.text-span-12,
+.text-span-13 {
   color: #8f0609;
   font-weight: 500;
 }
@@ -1026,7 +1033,8 @@ figcaption {
   align-self: auto;
 }
 
-.text-block, .text-block-2 {
+.text-block,
+.text-block-2 {
   font-weight: 600;
 }
 
@@ -1141,7 +1149,10 @@ figcaption {
   margin-left: 20px;
 }
 
-.list-item, .list-item-2, .list-item-3, .list {
+.list-item,
+.list-item-2,
+.list-item-3,
+.list {
   font-size: 14px;
 }
 
@@ -1377,8 +1388,8 @@ figcaption {
 
   .work-experience-grid {
     grid-template: ". ."
-                   ". ."
-                   / 1fr 1fr;
+      ". ."
+      / 1fr 1fr;
   }
 
   .works-grid {
@@ -1400,7 +1411,8 @@ figcaption {
     padding: 30px 50px 40px;
   }
 
-  .contact-headline, .contact-form-wrap {
+  .contact-headline,
+  .contact-form-wrap {
     width: 100%;
   }
 
@@ -1408,8 +1420,8 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
   }
 
   .about-head-text-wrap {
@@ -1430,8 +1442,8 @@ figcaption {
   .services-items-grid {
     grid-row-gap: 0px;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
     padding-top: 0;
   }
 
@@ -1440,8 +1452,8 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1450,10 +1462,10 @@ figcaption {
     width: 80%;
     text-align: center;
     grid-template: "."
-                   "."
-                   "."
-                   "."
-                   / 1fr;
+      "."
+      "."
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1467,10 +1479,10 @@ figcaption {
 
   .social-media-grid {
     grid-template: ". ."
-                   ". ."
-                   ". ."
-                   ". ."
-                   / 1fr 1fr;
+      ". ."
+      ". ."
+      ". ."
+      / 1fr 1fr;
   }
 
   .project-overview-grid {
@@ -1478,9 +1490,9 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   "."
-                   / 1fr;
+      "."
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1490,8 +1502,8 @@ figcaption {
     grid-row-gap: 50px;
     text-align: center;
     grid-template: "."
-                   "."
-                   / 1fr;
+      "."
+      / 1fr;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1590,9 +1602,9 @@ figcaption {
   .contact-form-grid {
     grid-column-gap: 30px;
     grid-template: "."
-                   "."
-                   "."
-                   / 1fr;
+      "."
+      "."
+      / 1fr;
   }
 
   .contact-form {
@@ -1634,7 +1646,8 @@ figcaption {
     grid-template-columns: 1fr;
   }
 
-  .personal-features-grid, .social-media-heading {
+  .personal-features-grid,
+  .social-media-heading {
     width: 70%;
     max-width: 470px;
   }
@@ -1725,7 +1738,8 @@ figcaption {
     padding-right: 20px;
   }
 
-  .menu-button, .menu-button.w--open {
+  .menu-button,
+  .menu-button.w--open {
     flex: none;
   }
 
@@ -1734,7 +1748,9 @@ figcaption {
     padding-right: 15px;
   }
 
-  .contact-form, .contact-form-wrap, .footer-wrap {
+  .contact-form,
+  .contact-form-wrap,
+  .footer-wrap {
     flex-direction: column;
   }
 
@@ -1749,7 +1765,10 @@ figcaption {
     grid-template-columns: 1fr;
   }
 
-  .personal-features-grid, .social-media-heading, .project-overview-grid, .project-description-grid {
+  .personal-features-grid,
+  .social-media-heading,
+  .project-overview-grid,
+  .project-description-grid {
     width: 100%;
     max-width: none;
   }
@@ -1781,7 +1800,7 @@ figcaption {
   }
 }
 
-#w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c1-e3382b46 {
+#w-node-_1 {
   grid-area: 1 / 1 / 2 / 2;
 }
 
@@ -1845,7 +1864,8 @@ figcaption {
   grid-area: 1 / 2 / 2 / 3;
 }
 
-#w-node-_1f85730f-9889-a71b-9be8-c086a8d10760-e3382b4b, #w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24 {
+#w-node-_1f85730f-9889-a71b-9be8-c086a8d10760-e3382b4b,
+#w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24 {
   grid-area: 1 / 1 / 2 / 2;
 }
 
@@ -1894,7 +1914,8 @@ figcaption {
     grid-area: 2 / 1 / 3 / 2;
   }
 
-  #w-node-_32040423-4078-1b23-6771-e6c78f8a716d-e3382b4a, #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b4b {
+  #w-node-_32040423-4078-1b23-6771-e6c78f8a716d-e3382b4a,
+  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-e3382b4b {
     grid-area: 1 / 1 / 2 / 2;
   }
 
@@ -1924,5 +1945,3 @@ figcaption {
     grid-area: 3 / 1 / 4 / 2;
   }
 }
-
-
