--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -336,11 +336,12 @@ figcaption {
 }
 
 .button:hover {
-  color: #fff;
+  color: #e5a078;
   background-color: #32343a;
 }
 
 .button:active {
+  color: #dd9b9b;
   background-color: #43464d;
 }
 
@@ -408,6 +409,7 @@ figcaption {
 
 .navigation-item:hover {
   opacity: .9;
+  color: #dd9b9b;
 }
 
 .navigation-item:active {
@@ -422,7 +424,7 @@ figcaption {
 
 .navigation-item.w--current:hover {
   opacity: .8;
-  color: #32343a;
+  color: #e5a078;
 }
 
 .navigation-item.w--current:active {
@@ -438,10 +440,12 @@ figcaption {
 }
 
 .navigation {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #fcf4f4;
   align-items: center;
   padding: 30px 50px;
   display: flex;
+  overflow: hidden;
+
 
 }
 
@@ -1028,6 +1032,51 @@ figcaption {
   opacity: .8;
 }
 
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #f1e2e2;
+  background-color: #f1e2e2;
+  margin: auto;
+  text-align: center;
+  width: 50%;
+  flex: 1;
+
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  text-align: center;
+  width: 25%;
+
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #e5a078;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #dd9b9b;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+
+}
+
 .tabs {
   flex: 1;
   align-self: auto;
@@ -1048,6 +1097,8 @@ figcaption {
 
 .heading-3 {
   color: #8f0609;
+  position: relative;
+  left: 10%;
   text-shadow: 0 5px 1px rgba(0, 0, 0, .2);
   font-family: Bitter, serif;
   font-size: 30px;
@@ -1214,6 +1265,8 @@ figcaption {
 
 .proj-image {
   margin-bottom: 18px;
+  height: 250px;
+  width: 100%;
 }
 
 .proj-info {
@@ -1252,7 +1305,7 @@ figcaption {
 }
 
 .slider {
-  display: none;
+  display: flex;
 }
 
 .proj-slider {
@@ -1274,6 +1327,13 @@ figcaption {
 
 .video {
   width: 25%;
+  height: auto;
+  flex: 1;
+  position: relative;
+}
+
+.site-embed {
+  width: 80%;
   height: auto;
   flex: 1;
   position: relative;
@@ -1340,6 +1400,10 @@ figcaption {
     padding-right: 0;
   }
 
+  .projects {
+    flex-direction: column;
+  }
+
   .button {
     justify-content: center;
   }
@@ -1355,23 +1419,38 @@ figcaption {
   .navigation-item {
     text-align: center;
     padding: 15px 30px;
-    transition: background-color .4s, opacity .4s, color .4s;
+
   }
 
   .navigation-item:hover {
-    background-color: #f7f8f9;
+    background-color: #fcf4f4;
+    color: #e5a078;
   }
 
   .navigation-item:active {
     background-color: #eef0f3;
+    color: #dd9b9b;
   }
 
   .navigation-items {
-    background-color: #fff;
+    text-align: center;
+    background-color: #fcf4f4;
+    flex-direction: column;
   }
 
   .navigation {
     padding: 25px 30px;
+
+  }
+
+  .navigation-wrap {
+    flex-direction: column;
+    text-align: center;
+
+  }
+
+  * {
+    box-sizing: border-box;
   }
 
   .menu-button {
@@ -1379,12 +1458,12 @@ figcaption {
   }
 
   .menu-button.w--open {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: #fcf4f4;
   }
 
-  .navigation-wrap {
+  /* .navigation-wrap {
     margin-right: 0;
-  }
+  } */
 
   .work-experience-grid {
     grid-template: ". ."
@@ -1722,7 +1801,7 @@ figcaption {
   }
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 580px) {
   .rich-text {
     width: 100%;
     max-width: none;
@@ -1734,8 +1813,15 @@ figcaption {
   }
 
   .navigation {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px 10px !important;
+  }
+
+
+  navigation-items {
+    flex-direction: column;
+    float: none;
+    display: block;
+    text-align: left;
   }
 
   .menu-button,
@@ -1865,15 +1951,15 @@ figcaption {
 }
 
 #w-node-_1f85730f-9889-a71b-9be8-c086a8d10760-e3382b4b,
-#w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24 {
+#contact-name {
   grid-area: 1 / 1 / 2 / 2;
 }
 
-#w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24 {
+#contact-email {
   grid-area: 1 / 2 / 2 / 3;
 }
 
-#w-node-d783a17e-0b35-a13a-0448-a852d0df4a3a-d0df4a24 {
+#contact-message {
   grid-area: 2 / 1 / 3 / 3;
 }
 
